# cer2nut

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: cmake-single-platform.yml
main/: .clang-format  CMakeLists.txt  bleuart.cpp  bleuart.h  cer2nut.cpp  idf_component.yml  vcpusb.cpp  vcpusb.h
main/adapter/: CMakeLists.txt
main/adapter/lib/: BoardTranslator.h  CalibrationSquare.cpp  CalibrationSquare.h  CapturePiece.h  CertaboBoardMessageParser.cpp  CertaboBoardMessageParser.h  CertaboCalibrator.cpp  CertaboCalibrator.h  CertaboLedControl.cpp  CertaboLedControl.h  CertaboParser.cpp  CertaboParser.h  CertaboPiece.cpp  CertaboPiece.h  Chess0x88.cpp  Chess0x88.h  ChessData.h  ChessnutAdapter.cpp  ChessnutAdapter.h  ChessnutConverter.cpp  ChessnutConverter.h  RgbLedCommandTranslator.cpp  RgbLedCommandTranslator.h  Sentio.cpp  Sentio.h
main/adapter/test/: CertaboBoardMessageParserTest.cpp  CertaboCalibratorTest.cpp  CertaboParserTest.cpp  Chess0x88Test.cpp  ChessnutAdapterTest.cpp  ChessnutConverterTest.cpp  RgbLedCommandTranslatorTest.cpp  SentioTest.cpp  unittest_main.cpp
